# Ball

./: .gitignore  CMakeLists.txt  README.md  config.h.in  game.cpp  main.cpp
components/: camera.cpp
include/: game.hpp  game_state.hpp
include/components/: camera.hpp
include/states/: cube_state.hpp  triangle_state.hpp
include/util/: shader_loader.hpp
shaders/cube/: fragment.glsl  vertex.glsl
shaders/triangle/: fragment.glsl  vertex.glsl
states/: cube_state.cpp  triangle_state.cpp
util/: shader_loader.cpp
